fix nav bar spacing

--- a/public/Kanbas/Courses/Home/index.css
+++ b/public/Kanbas/Courses/Home/index.css
@@ -53,3 +53,10 @@
     padding: 0.2em
 }
 
+.breadcrumb {
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    
+}
